--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" media="screen" href="css.css">
     <script src="js/jquery-1.10.1.min.js"></script>
     <script src="js/underscore-min.js"></script>
