Invalidate browser cache for js and css

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" media="screen" href="css.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="css.css?v=250713">
     <script src="js/jquery-1.10.1.min.js"></script>
     <script src="js/underscore-min.js"></script>
-    <script src="js/js.js"></script>
+    <script src="js/js.js?v=250713"></script>
     <title></title>
 </head>
 <body>
